k8s/ingress-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diploma-all-services
  annotations:
    kubernetes.io/ingress.class: nginx
    # Эти две строки — магия для Grafana и Argo CD за Ingress'ом
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - http:
        paths:
          # 1. Главная страница
          - path: /
            pathType: Prefix
            backend:
              service:
                name: diploma-app
                port:
                  number: 80

          # 2. Grafana
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80

          # 3. Argo CD
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                namespace: argocd
                port:
                  number: 80
